--- a/src/components/EmployeeSearch/EmployeeSearch.module.scss
+++ b/src/components/EmployeeSearch/EmployeeSearch.module.scss
@@ -1,6 +1,7 @@
 .employeeContainer{
     padding: 40px;
     margin: auto;
+    width: 80%;
 }
 
 .employeeSearchContainer{
@@ -11,38 +12,38 @@
         outline: grey auto 0;
         line-height: 18px;
     }
+}
 
-    button{
-        height: 32px;
-        position: relative;
-        border: 1px solid #5d5a5a;
-        cursor: pointer;
-        box-sizing: border-box;
-        padding: 5px 15px;
-        margin-left: 5px;
-        line-height: 22px;
-        top: 1px;
-        color: #443b3b;
-        outline: grey auto 0;
-        background: #b5b5b1;
+.employeeBtn{
+    height: 32px;
+    position: relative;
+    border: 1px solid #5d5a5a;
+    cursor: pointer;
+    box-sizing: border-box;
+    padding: 5px 15px;
+    margin-left: 5px;
+    line-height: 22px;
+    top: 1px;
+    color: #443b3b;
+    outline: grey auto 0;
+    background: #b5b5b1;
 
-        &:disabled{
-            opacity: 0.5;
-            border: 1px solid #ccc;
-            &:hover{
-                background: #b5b5b1;
-            }
-        }
-
+    &:disabled{
+        opacity: 0.5;
+        border: 1px solid #ccc;
         &:hover{
-            background: lightgrey;
+            background: #b5b5b1;
         }
+    }
+
+    &:hover{
+        background: lightgrey;
     }
 }
 
 .employeeSearchNoResults{
-    margin: 10px 0;
-    text-align: left;
+    margin: 20px 0;
+    text-align: center;
     font-size: 14px;
 }
 
